--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "rahe1",
   "version": "0.1.0",
+  "homepage": "https://projctsite.github.io/rahe1/",
   "private": true,
-  
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
